Correct CSS class name conventions
CSS class name conventions in multiple HTML files have been updated. Specifically,  double hyphens (--) have been replaced with single hyphens (-) for clearer indication of classes and subclasses. This change not only improves readability but also aligns the code with common CSS naming standards.

--- a/public/app/allocate.html
+++ b/public/app/allocate.html
@@ -176,7 +176,7 @@
                         <div class="modal_crd_tit_txt">Swap</div>
                         <div class="modal_crd_subtxt">Change the ISP and location of the selected devices</div>
                     </div>
-                    <div class="modal--divider _12"></div>
+                    <div class="modal-divider _12"></div>
                 </div>
                 <div class="mod_crd_detail-wrap">
                     <div class="columns-5 w-row">
@@ -299,7 +299,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="modal--divider _100"></div>
+                <div class="modal-divider _100"></div>
             </div>
             <div class="modal_crd--line-divider"></div>
             <div class="modal_crd_content_wrp_btm">
