--- a/public/app/dashboard.html
+++ b/public/app/dashboard.html
@@ -58,7 +58,7 @@
                         <div class="modal_crd_tit_txt">Swap</div>
                         <div class="modal_crd_subtxt">Change the ISP and location of the selected devices</div>
                     </div>
-                    <div class="modal--divider _12"></div>
+                    <div class="modal-divider _12"></div>
                 </div>
                 <div class="mod_crd_detail-wrap">
                     <div class="columns-5 w-row">
@@ -181,7 +181,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="modal--divider _100"></div>
+                <div class="modal-divider _100"></div>
             </div>
             <div class="modal_crd--line-divider"></div>
             <div class="modal_crd_content_wrp_btm">
@@ -865,7 +865,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="modal_config--divider-line"></div>
+                                            <div class="modal_config-divider-line"></div>
                                             <div class="config-row w-clearfix">
                                                 <div class="modal_config_link-wrap left">
                                                     <div class="config-text">Method</div>
@@ -946,7 +946,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="modal_config--divider-line"></div>
+                                            <div class="modal_config-divider-line"></div>
                                             <div class="config-row w-clearfix">
                                                 <div class="modal_config_link-wrap left">
                                                     <div class="config-text">Server</div>
@@ -993,7 +993,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="modal_config--divider-line"></div>
+                                            <div class="modal_config-divider-line"></div>
                                             <div class="config-row w-clearfix">
                                                 <div class="modal_config_link-wrap left">
                                                     <div class="config-text">Live threads</div>
@@ -1025,7 +1025,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="modal_config--divider-line"></div>
+                                            <div class="modal_config-divider-line"></div>
                                             <div class="config-row w-clearfix">
                                                 <div class="modal_config_link-wrap left">
                                                     <div class="config-text">Last IP change</div>
@@ -1093,7 +1093,7 @@
                                                     </a>
                                                 </div>
                                             </div>
-                                            <div class="modal_config--divider-line"></div>
+                                            <div class="modal_config-divider-line"></div>
                                             <div class="config-row w-clearfix">
                                                 <div class="modal_config_link-wrap left">
                                                     <div class="config-text">Local date &amp; time</div>
@@ -1141,7 +1141,7 @@
                                             <div class="config_tit-wrap">
                                                 <div class="modal_option_tit-text">Specs</div>
                                             </div>
-                                            <div class="modal_config--divider-line"></div>
+                                            <div class="modal_config-divider-line"></div>
                                             <div class="config-row w-clearfix">
                                                 <div class="modal_config_link-wrap left">
                                                     <div class="config-text">Location</div>
