--- a/public/app/settings/member.html
+++ b/public/app/settings/member.html
@@ -169,7 +169,7 @@
                                 <div class="sect_crd_subtxt">Member Price</div>
                             </div>
                         </div>
-                        <div class="sect_crd--divider marg8"></div>
+                        <div class="sect_crd-divider marg8"></div>
                         <div class="data_table_grid-wrap">
                             <div class="w-layout-grid data_table--grid">
                                 <div class="sect_crd_subtxt">Yearly</div>
@@ -192,7 +192,7 @@
                                 <div class="sect_crd_subtxt">$15</div>
                             </div>
                         </div>
-                        <div class="sect_crd--divider"></div>
+                        <div class="sect_crd-divider"></div>
                         <div class="notice_subtext-wrap center w-clearfix">
                             <div class="notice-text">Additional discounts apply for bulk orders. All savings are
                                 subject to change
@@ -229,7 +229,7 @@
             <div class="sect_crds_content--container">
                 <div sect_content="enable_start" class="sect_crds_content-inner">
                     <div class="sect_block long1 w-clearfix">
-                        <div class="sect_block--divider"></div>
+                        <div class="sect_block-divider"></div>
                         <div class="sect_block_tit_text-wrap left w-clearfix">
                             <div class="sect_block_tit-text">What are “Member Discounts”?</div>
                             <div class="sect_block-text left">Illusory offers special, lifetime discounts for users
@@ -261,7 +261,7 @@
                                     <div class="sect_crd_subtxt">Member Price</div>
                                 </div>
                             </div>
-                            <div class="sect_crd--divider marg8"></div>
+                            <div class="sect_crd-divider marg8"></div>
                             <div class="data_table_grid-wrap">
                                 <div class="w-layout-grid data_table--grid">
                                     <div class="sect_crd_subtxt">Yearly</div>
@@ -284,7 +284,7 @@
                                     <div class="sect_crd_subtxt">$15</div>
                                 </div>
                             </div>
-                            <div class="sect_crd--divider"></div>
+                            <div class="sect_crd-divider"></div>
                             <div class="notice_subtext-wrap center w-clearfix">
                                 <div class="notice-text">Additional discounts apply for bulk orders. All savings are
                                     subject to change
@@ -305,7 +305,7 @@
                         </div>
                     </div>
                     <div class="sect_block long1 w-clearfix">
-                        <div class="sect_block--divider"></div>
+                        <div class="sect_block-divider"></div>
                         <div class="sect_block_tit_text-wrap left w-clearfix">
                             <div class="sect_block-text left">Not a blackhatworld.com forum member? No worries! You can
                                 simply create an account and enable this setting afterwards.
@@ -323,7 +323,7 @@
                     </div>
                 </div>
                 <div sect_content="enable_form" class="sect_crds_content-inner hide">
-                    <div class="sect_block--divider pad_top"></div>
+                    <div class="sect_block-divider pad_top"></div>
                     <div sect_block="specify_member" class="sect_block form_block">
                         <div class="sect_block_tit-wrap w-clearfix">
                             <div class="sect_block_tit-text">Are you a member of blackhatworld.com?</div>
@@ -334,7 +334,7 @@
                             </a>
                         </div>
                         <div class="sect_block-text">Select either one</div>
-                        <div class="sect_block--divider"></div>
+                        <div class="sect_block-divider"></div>
                         <div class="action_btn-wrap w-clearfix">
                             <div class="action_btn_grid-wrap two">
                                 <div action_btn="is_member" class="action_btn w-clearfix">
@@ -371,7 +371,7 @@
                                 the answer above to “Yes, I am a member”.
                             </div>
                         </div>
-                        <div class="sect_block--divider"></div>
+                        <div class="sect_block-divider"></div>
                         <div class="action_btn-wrap w-clearfix">
                             <div class="action_btn_grid-wrap">
                                 <a href="#" target="_blank" class="action_btn w-inline-block">
@@ -395,7 +395,7 @@
                                 the forum and will be used to verify your account.
                             </div>
                         </div>
-                        <div class="sect_block--divider"></div>
+                        <div class="sect_block-divider"></div>
                         <div class="input_grid-wrap">
                             <div class="w-layout-grid input--grid">
                                 <div class="input-wrap w-clearfix">
@@ -446,8 +446,8 @@
                                 same username you provided us for our team to verify.
                             </div>
                         </div>
-                        <div class="sect_block--divider"></div>
-                        <div class="sect_block--divider"></div>
+                        <div class="sect_block-divider"></div>
+                        <div class="sect_block-divider"></div>
                         <div class="input_grid-wrap">
                             <div class="w-layout-grid input--grid">
                                 <div class="input-wrap w-clearfix">
@@ -495,7 +495,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="sect_block--divider"></div>
+                        <div class="sect_block-divider"></div>
                         <div class="w-layout-grid cta_crd--grid small">
                             <a href="/docs/account/member" target="_blank" class="sect_crd small2 w-inline-block">
                                 <div class="sect_crd_tit_wrp">
@@ -565,7 +565,7 @@
                                 our team to expedite the review process.
                             </div>
                         </div>
-                        <div class="sect_block--divider"></div>
+                        <div class="sect_block-divider"></div>
                         <div block_content="notify_team" class="action_btn-wrap w-clearfix">
                             <div class="action_btn_grid-wrap three">
                                 <div action_btn="notify_team" class="action_btn external w-clearfix">
@@ -596,7 +596,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="sect_block--divider pad_top"></div>
+                    <div class="sect_block-divider pad_top"></div>
                 </div>
             </div>
         </div>
