--- a/public/app/help.html
+++ b/public/app/help.html
@@ -132,7 +132,7 @@
                   <div class="sect_crd_subtxt">Member Price</div>
                 </div>
               </div>
-              <div class="sect_crd--divider marg8"></div>
+              <div class="sect_crd-divider marg8"></div>
               <div class="data_table_grid-wrap">
                 <div class="w-layout-grid data_table--grid">
                   <div class="sect_crd_subtxt">Yearly</div>
@@ -155,7 +155,7 @@
                   <div class="sect_crd_subtxt">$15</div>
                 </div>
               </div>
-              <div class="sect_crd--divider"></div>
+              <div class="sect_crd-divider"></div>
               <div class="notice_subtext-wrap center w-clearfix">
                 <div class="notice-text">Additional discounts apply for bulk orders. All savings are subject to change</div><img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo-icon">
                 <div class="info-wrap sect-crd right">
@@ -185,7 +185,7 @@
         <div class="sect_crds_content--container">
           <div sect_content="enable_start" class="sect_crds_content-inner hide">
             <div class="sect_block long1 w-clearfix">
-              <div class="sect_block--divider"></div>
+              <div class="sect_block-divider"></div>
               <div class="sect_block_tit_text-wrap left w-clearfix">
                 <div class="sect_block_tit-text">What are “Member Discounts”?</div>
                 <div class="sect_block-text left">Illusory offers special, lifetime discounts for users that have an account with one of our partner forums. Enable to begin the process of receiving generous savings as seen below.</div>
@@ -213,7 +213,7 @@
                     <div class="sect_crd_subtxt">Member Price</div>
                   </div>
                 </div>
-                <div class="sect_crd--divider marg8"></div>
+                <div class="sect_crd-divider marg8"></div>
                 <div class="data_table_grid-wrap">
                   <div class="w-layout-grid data_table--grid">
                     <div class="sect_crd_subtxt">Yearly</div>
@@ -236,7 +236,7 @@
                     <div class="sect_crd_subtxt">$15</div>
                   </div>
                 </div>
-                <div class="sect_crd--divider"></div>
+                <div class="sect_crd-divider"></div>
                 <div class="notice_subtext-wrap center w-clearfix">
                   <div class="notice-text">Additional discounts apply for bulk orders. All savings are subject to change</div><img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo-icon">
                   <div class="info-wrap sect-crd right">
@@ -250,7 +250,7 @@
               </div>
             </div>
             <div class="sect_block long1 w-clearfix">
-              <div class="sect_block--divider"></div>
+              <div class="sect_block-divider"></div>
               <div class="sect_block_tit_text-wrap left w-clearfix">
                 <div class="sect_block-text left">Not a blackhatworld.com forum member? No worries! You can simply create an account and enable this setting afterwards.</div>
               </div>
@@ -265,13 +265,13 @@
             </div>
           </div>
           <div sect_content="enable-form" class="sect_crds_content-inner">
-            <div class="sect_block--divider pad_top"></div>
+            <div class="sect_block-divider pad_top"></div>
             <div sect_block="specify-issue" class="sect_block form_block">
               <div class="sect_block_tit-wrap">
                 <div class="sect_block_tit-text">What area are you having problems with?</div>
               </div>
               <div class="sect_block-text">Select one</div>
-              <div class="sect_block--divider"></div>
+              <div class="sect_block-divider"></div>
               <div class="action_btn-wrap w-clearfix">
                 <div class="action_btn_grid-wrap fw">
                   <div action_btn-issue-area="performance" class="action_btn help-btn w-clearfix">
@@ -314,7 +314,7 @@
                 <div class="sect_block_tit-text">Severity</div>
               </div>
               <div class="sect_block-text">Select one</div>
-              <div class="sect_block--divider"></div>
+              <div class="sect_block-divider"></div>
               <div class="action_btn-wrap w-clearfix">
                 <div class="action_btn_grid-wrap fw">
                   <div action_btn-issue-severity="low" selected class="action_btn help-btn green w-clearfix">
@@ -341,7 +341,7 @@
                 <div class="sect_block_tit-text">Which services are affected?</div>
               </div>
               <div class="sect_block-text">Select all that apply</div>
-              <div class="sect_block--divider"></div>
+              <div class="sect_block-divider"></div>
               <div class="action_btn-wrap w-clearfix">
                 <div class="action_btn_grid-wrap two fw">
                   <div action_btn-issue-service="proxies" class="action_btn w-clearfix">
@@ -376,7 +376,7 @@
                 <div class="sect_block_tit-text">Which proxies are affected?</div>
               </div>
               <div class="sect_block-text">Select all that apply</div>
-              <div class="sect_block--divider"></div>
+              <div class="sect_block-divider"></div>
               <div class="action_btn-wrap w-clearfix">
                 <div class="action_btn_grid-wrap fw">
                   <div action_btn="is_member" class="action_btn help-btn w-clearfix">
@@ -397,7 +397,7 @@
               <div class="sect_block_text-wrap">
                 <div class="sect_block-text">Summary of the problem you have</div>
               </div>
-              <div class="sect_block--divider"></div>
+              <div class="sect_block-divider"></div>
               <div class="input_grid-wrap">
                 <div class="w-layout-grid input--grid">
                   <div class="input-wrap w-clearfix">
@@ -413,7 +413,7 @@
               <div class="sect_block_text-wrap">
                 <div class="sect_block-text">Describe the issue you&#x27;re facing, along with any relevant information. Please be as detailed and specific as possible.</div>
               </div>
-              <div class="sect_block--divider"></div>
+              <div class="sect_block-divider"></div>
               <div class="input_grid-wrap textarea">
                 <div class="w-layout-grid input--grid">
                   <div class="input-wrap w-clearfix">
@@ -430,7 +430,7 @@
               <div class="sect_block_text-wrap">
                 <div class="sect_block-text">Upload up to 5 screenshots that might be relevant to theissue that you&#x27;re facing</div>
               </div>
-              <div class="sect_block--divider"></div>
+              <div class="sect_block-divider"></div>
               <div block_content="notify_team" class="action_btn-wrap w-clearfix">
                 <div class="action_btn_grid-wrap three">
                   <div  class="attachment-btn"></div>
@@ -444,7 +444,7 @@
               <div class="sect_block_text-wrap">
                 <div class="sect_block-text">Already posted your license key on our forum thread? Notify our team to expedite the review process.</div>
               </div>
-              <div class="sect_block--divider"></div>
+              <div class="sect_block-divider"></div>
               <div block_content="notify_team" class="action_btn-wrap w-clearfix">
                 <div class="action_btn_grid-wrap">
                   <div action_btn="notify_team" class="action_btn external w-clearfix">
@@ -492,7 +492,7 @@
                 </a>
               </div>
             </div>
-            <div class="sect_block--divider pad_top"></div>
+            <div class="sect_block-divider pad_top"></div>
           </div>
         </div>
       </div>
