Refactor CSS class naming for clarity
The CSS class names in multiple HTML files were updated to make them more descriptive and easier to understand. The change involved replacing double hyphens (--) with single hyphens (-), providing clearer parent-child class relationships. This refactoring aligns the codebase with standard CSS naming conventions, enabling improved readability and maintenance.

--- a/public/app/settings/developers.html
+++ b/public/app/settings/developers.html
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div class="input_grid-wrap">
-                        <div class="w-layout-grid input--grid">
+                        <div class="w-layout-grid input-grid">
                             <div class="input-wrap w-clearfix">
                                 <div class="skel_apikey fullheight">
                                     <div class="skel_apikey_bg"></div>
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     <div class="input_grid-wrap">
-                        <div class="w-layout-grid input--grid">
+                        <div class="w-layout-grid input-grid">
                             <div class="input-wrap w-clearfix">
                                 <div class="skel_apikey fullheight">
                                     <div class="skel_apikey_bg"></div>
