--- a/public/app/settings/member.html
+++ b/public/app/settings/member.html
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div class="input_grid-wrap">
-                        <div class="w-layout-grid input--grid two">
+                        <div class="w-layout-grid input-grid two">
                             <div class="input-wrap w-clearfix">
                                 <div class="input_label_ind-wrap">
                                     <div class="input_label_ind-inner w-clearfix">
@@ -238,7 +238,7 @@
                             </div>
                         </div>
                         <div class="action_btn-wrap right w-clearfix">
-                            <div class="action_btn_grid-wrap">
+                            <div class="action-btn-grid-wrap">
                                 <div action_btn="enable_member_start" class="action_btn padw w-clearfix">
                                     <div class="action_btn-text">Enable</div>
                                 </div>
@@ -312,7 +312,7 @@
                             </div>
                         </div>
                         <div class="action_btn-wrap right w-clearfix">
-                            <div class="action_btn_grid-wrap">
+                            <div class="action-btn-grid-wrap">
                                 <a href="https://illusory.to/bhw-register" target="_blank"
                                    class="action_btn w-inline-block">
                                     <div class="btn_icon external"></div>
@@ -336,7 +336,7 @@
                         <div class="sect_block-text">Select either one</div>
                         <div class="sect_block-divider"></div>
                         <div class="action_btn-wrap w-clearfix">
-                            <div class="action_btn_grid-wrap two">
+                            <div class="action-btn-grid-wrap two">
                                 <div action_btn="is_member" class="action_btn w-clearfix">
                                     <div action_btn_text="is_member" class="action_btn-text">Yes, I am a member</div>
                                     <div lottie_ldr_wrap="is_member" class="lottie_btn_ldr-wrap middle w-embed">
@@ -373,7 +373,7 @@
                         </div>
                         <div class="sect_block-divider"></div>
                         <div class="action_btn-wrap w-clearfix">
-                            <div class="action_btn_grid-wrap">
+                            <div class="action-btn-grid-wrap">
                                 <a href="#" target="_blank" class="action_btn w-inline-block">
                                     <div class="btn_icon external"></div>
                                     <div class="action_btn-text">Go create account</div>
@@ -397,7 +397,7 @@
                         </div>
                         <div class="sect_block-divider"></div>
                         <div class="input_grid-wrap">
-                            <div class="w-layout-grid input--grid">
+                            <div class="w-layout-grid input-grid">
                                 <div class="input-wrap w-clearfix">
                                     <div class="input_label_ind-wrap">
                                         <div class="input_label_ind-inner w-clearfix">
@@ -449,7 +449,7 @@
                         <div class="sect_block-divider"></div>
                         <div class="sect_block-divider"></div>
                         <div class="input_grid-wrap">
-                            <div class="w-layout-grid input--grid">
+                            <div class="w-layout-grid input-grid">
                                 <div class="input-wrap w-clearfix">
                                     <div class="input_label_ind-wrap left">
                                         <div class="input_label_ind-inner w-clearfix">
@@ -567,7 +567,7 @@
                         </div>
                         <div class="sect_block-divider"></div>
                         <div block_content="notify_team" class="action_btn-wrap w-clearfix">
-                            <div class="action_btn_grid-wrap three">
+                            <div class="action-btn-grid-wrap three">
                                 <div action_btn="notify_team" class="action_btn external w-clearfix">
                                     <div action_btn_text="notify_team" class="action_btn-text">I’m ready for review
                                     </div>
